Fixing the logic for buying membership . Adding logic for the schedule , trainings for the coaches and users. When the training is past , it will go disabled. For each training maximum 5 participants. Coach can also cancel training and email will be sent  to the participants . Schedulers for populating new weekly trainings each week and deleting the passed ones every day at midnight. Each user can enroll for diff number of trainings , depending on the membership type he has bought.

--- a/crossfit-client/src/main/resources/static/css/schedule.css
+++ b/crossfit-client/src/main/resources/static/css/schedule.css
@@ -34,7 +34,11 @@ body::before {
 .card .unavailable{
     background: #6c757d;
 
-
+}
+.card-date {
+    font-size: 0.9em;
+    color: #b0b0b0; /* Muted gray color */
+    margin-left: 10px;
 }
 .details {
     display: flex;
