--- a/crossfit-client/src/main/resources/templates/memberships.html
+++ b/crossfit-client/src/main/resources/templates/memberships.html
@@ -67,7 +67,7 @@
                 <tr>
                     <th style="width: 34%;"></th>
                     <th style="width: 22%;">Basic Plan</th>
-                    <th style="width: 22%;">Plus Plan</th>
+                    <th style="width: 22%;">Premium Plan</th>
                     <th style="width: 22%;">Elite Plan</th>
                 </tr>
                 </thead>
@@ -76,7 +76,7 @@
                     <th scope="row" class="text-start font-weight-bold">Class access</th>
                     <td class="text-light">3 classes/week</td>
                     <td class="text-light">5 classes/week</td>
-                    <td class="text-light">Unlimited</td>
+                    <td class="text-light">7 classes/week</td>
                 </tr>
                 <tr>
                     <th scope="row" class="text-start font-weight-bold">Specialized Workshops</th>
