--- a/crossfit-client/src/main/resources/static/css/upcoming-trainings.css
+++ b/crossfit-client/src/main/resources/static/css/upcoming-trainings.css
@@ -295,7 +295,7 @@ body::before {
 }
 
 .widget-49 .widget-49-title-wrapper .widget-49-meeting-info .widget-49-meeting-time {
-    color: #B1BAC5;
+    color: dimgray;
     font-size: 13px;
 }
 
