--- a/crossfit-client/src/main/resources/templates/index.html
+++ b/crossfit-client/src/main/resources/templates/index.html
@@ -53,7 +53,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 mb-4">
-                <a th:href="@{${#authorization.expression('hasRole(''MEMBER'')') ? '/schedule-for-the-week' : '/memberships'}}" class="main-btn">
+                <a th:href="@{${#authorization.expression('hasRole(''MEMBER'')') ? '/schedule-for-the-week' : '/memberships/explore'}}" class="main-btn">
                     <div class="box text-center">
                         <i class="fas fa-calendar-alt fa-5x mb-3"></i>
                         <h3>Schedule</h3>
