--- a/crossfit-client/src/main/resources/templates/upcoming-trainings.html
+++ b/crossfit-client/src/main/resources/templates/upcoming-trainings.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Upcoming Trainings</title>
@@ -11,150 +11,28 @@
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
           crossorigin="anonymous" rel="stylesheet"/>
 </head>
-<body style=" background: url('/images/upcoming-trainings-coach.webp') no-repeat center center fixed;background-size: cover;">
-<nav th:replace = "~{fragments/navbar::nav}"></nav>
-<div class="container" >
+<body style="background: url('/images/upcoming-trainings-coach.webp') no-repeat center center fixed; background-size: cover;">
+<nav th:replace="~{fragments/navbar::nav}"></nav>
+<div class="container" style="margin-top: 60px;"> <!-- Adjust margin-top if needed -->
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 mb-5" th:each="upcomingTraining : ${upcomingTrainings}">
             <div class="card card-margin">
                 <div class="card-header no-border">
-                    <h5 class="card-title">WOD</h5>
+                    <h5 class="card-title" th:text="*{upcomingTraining.trainingType}">WOD</h5>
                 </div>
                 <div class="card-body pt-0">
                     <div class="widget-49">
                         <div class="widget-49-title-wrapper">
-                            <div class="widget-49-date-primary">
-                                <span class="widget-49-date-day">09</span>
-                                <span class="widget-49-date-month">apr</span>
-                            </div>
                             <div class="widget-49-meeting-info">
-                                <span class="widget-49-pro-title">PRO-08235 DeskOpe. Website</span>
-                                <span class="widget-49-meeting-time">12:00 to 13.30 Hrs</span>
+                                <span class="widget-49-pro-title" th:text="'Taking place on ' + *{upcomingTraining.dayOfWeek} + ', ' + *{upcomingTraining.date}">PRO-08235 DeskOpe. Website</span>
+                                <span class="widget-49-meeting-time" th:text="'Starting at ' + *{upcomingTraining.time}"></span>
+                                <span class="widget-49-participants" th:text="'Participants enrolled: ' + *{upcomingTraining.participants.size()}"></span>
                             </div>
                         </div>
-                        <ol class="widget-49-meeting-points">
-                            <li class="widget-49-meeting-item"><span>Expand module is removed</span></li>
-                            <li class="widget-49-meeting-item"><span>Data migration is in scope</span></li>
-                            <li class="widget-49-meeting-item"><span>Session timeout increase to 30 minutes</span></li>
-                        </ol>
                         <div class="widget-49-meeting-action">
-                            <button  class="btn btn-dark btn-outline-secondary" style="color: white">Cancel Participation</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="card card-margin">
-                <div class="card-header no-border">
-                    <h5 class="card-title">HYROX</h5>
-                </div>
-                <div class="card-body pt-0">
-                    <div class="widget-49">
-                        <div class="widget-49-title-wrapper">
-                            <div class="widget-49-date-warning">
-                                <span class="widget-49-date-day">13</span>
-                                <span class="widget-49-date-month">apr</span>
-                            </div>
-                            <div class="widget-49-meeting-info">
-                                <span class="widget-49-pro-title">PRO-08235 Lexa Corp.</span>
-                                <span class="widget-49-meeting-time">12:00 to 13.30 Hrs</span>
-                            </div>
-                        </div>
-                        <ol class="widget-49-meeting-points">
-                            <li class="widget-49-meeting-item"><span>Scheming module is removed</span></li>
-                            <li class="widget-49-meeting-item"><span>App design contract confirmed</span></li>
-                            <li class="widget-49-meeting-item"><span>Client request to send invoice</span></li>
-                        </ol>
-                        <div class="widget-49-meeting-action">
-                            <button  class="btn btn-dark btn-outline-secondary" style="color: white">Cancel Participation</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="card card-margin">
-                <div class="card-header no-border">
-                    <h5 class="card-title">CARDIO</h5>
-                </div>
-                <div class="card-body pt-0">
-                    <div class="widget-49">
-                        <div class="widget-49-title-wrapper">
-                            <div class="widget-49-date-success">
-                                <span class="widget-49-date-day">22</span>
-                                <span class="widget-49-date-month">apr</span>
-                            </div>
-                            <div class="widget-49-meeting-info">
-                                <span class="widget-49-pro-title">PRO-027865 Opera module</span>
-                                <span class="widget-49-meeting-time">12:00 to 13.30 Hrs</span>
-                            </div>
-                        </div>
-                        <ol class="widget-49-meeting-points">
-                            <li class="widget-49-meeting-item"><span>Scope is revised and updated</span></li>
-                            <li class="widget-49-meeting-item"><span>Time-line has been changed</span></li>
-                            <li class="widget-49-meeting-item"><span>Received approval to start wire-frame</span></li>
-                        </ol>
-                        <div class="widget-49-meeting-action">
-                            <button  class="btn btn-dark btn-outline-secondary" style="color: white">Cancel Participation</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="card card-margin">
-                <div class="card-header no-border">
-                    <h5 class="card-title">HYROX</h5>
-                </div>
-                <div class="card-body pt-0">
-                    <div class="widget-49">
-                        <div class="widget-49-title-wrapper">
-                            <div class="widget-49-date-warning">
-                                <span class="widget-49-date-day">13</span>
-                                <span class="widget-49-date-month">apr</span>
-                            </div>
-                            <div class="widget-49-meeting-info">
-                                <span class="widget-49-pro-title">PRO-08235 Lexa Corp.</span>
-                                <span class="widget-49-meeting-time">12:00 to 13.30 Hrs</span>
-                            </div>
-                        </div>
-                        <ol class="widget-49-meeting-points">
-                            <li class="widget-49-meeting-item"><span>Scheming module is removed</span></li>
-                            <li class="widget-49-meeting-item"><span>App design contract confirmed</span></li>
-                            <li class="widget-49-meeting-item"><span>Client request to send invoice</span></li>
-                        </ol>
-                        <div class="widget-49-meeting-action">
-                            <button  class="btn btn-dark btn-outline-secondary" style="color: white">Cancel Participation</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="card card-margin">
-                <div class="card-header no-border">
-                    <h5 class="card-title">HYROX</h5>
-                </div>
-                <div class="card-body pt-0">
-                    <div class="widget-49">
-                        <div class="widget-49-title-wrapper">
-                            <div class="widget-49-date-warning">
-                                <span class="widget-49-date-day">13</span>
-                                <span class="widget-49-date-month">apr</span>
-                            </div>
-                            <div class="widget-49-meeting-info">
-                                <span class="widget-49-pro-title">PRO-08235 Lexa Corp.</span>
-                                <span class="widget-49-meeting-time">12:00 to 13.30 Hrs</span>
-                            </div>
-                        </div>
-                        <ol class="widget-49-meeting-points">
-                            <li class="widget-49-meeting-item"><span>Scheming module is removed</span></li>
-                            <li class="widget-49-meeting-item"><span>App design contract confirmed</span></li>
-                            <li class="widget-49-meeting-item"><span>Client request to send invoice</span></li>
-                        </ol>
-                        <div class="widget-49-meeting-action">
-                            <button  class="btn btn-dark btn-outline-secondary" style="color: white">Cancel Participation</button>
+                            <form th:method="POST" th:action="@{/my-weekly-schedule/{username}/cancel-training/{weeklyTrainingId}(username=${#authentication.principal.username}, weeklyTrainingId=${upcomingTraining.id})}">
+                                <button type="submit" class="btn btn-dark btn-outline-secondary" style="color: white">Cancel Participation</button>
+                            </form>
                         </div>
                     </div>
                 </div>
