--- a/crossfit-client/src/main/resources/templates/workout-details.html
+++ b/crossfit-client/src/main/resources/templates/workout-details.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Workout-Details-Page</title>
-
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
     <link th:href="@{/css/workout-details.css}" rel="stylesheet"/>
     <link th:href="@{/css/navbar.css}" rel="stylesheet"/>
@@ -11,11 +10,31 @@
     <link href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
           crossorigin="anonymous" rel="stylesheet"/>
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="trainingType" th:content="${trainingType}"/>
+    <style>
+        .like-dislike-buttons button {
+            background: none;
+            border: none;
+            color: #007bff;
+            cursor: pointer;
+            padding: 0;
+            font-size: 1.25rem;
+        }
+
+        .like-dislike-buttons button:hover {
+            color: #0056b3;
+        }
+
+        .like-dislike-buttons i {
+            margin-right: 0.5rem;
+        }
+    </style>
 </head>
 <body>
-<nav th:replace = "~{fragments/navbar::nav}"></nav>
+<nav th:replace="~{fragments/navbar::nav}"></nav>
 <div class="container">
-    <div class="row" >
+    <div class="row">
         <!-- Left Side: Training Description Card -->
         <div class="col-md-12 mt-2 mb-2" th:object="${currentTrainingDto}">
             <div class="card mb-7">
@@ -23,40 +42,36 @@
                 <div class="card-body bg-dark" style="color:white;">
                     <h5 class="card-title" th:text="*{trainingType}"></h5>
                     <p class="card-text" th:text="*{description}"></p>
-                    <p class="card-text"><small>Level of the training: <span class="text-danger" th:text="*{level}">Advanced</span></small></p>
+                    <p class="card-text">
+                        <small>Level of the training: <span class="text-danger" th:text="*{level}">Advanced</span></small>
+                    </p>
                 </div>
             </div>
         </div>
 
-
         <!-- Right Side: Comments Section -->
         <div class="col-md-12">
-            <div class="be-comment-block" >
+            <div class="be-comment-block">
                 <h1 class="comments-title" th:text="'Comments: ' + ${displayedCommentsForTheSectionDtos.size()}"></h1>
 
-                <!-- Comment 1 -->
+                <!-- Comment -->
                 <div class="d-flex flex-start mb-4" th:each="comment : ${displayedCommentsForTheSectionDtos}">
                     <img class="rounded-circle shadow-1-strong me-3"
                          src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(32).webp" alt="avatar" width="65"
                          height="65" />
                     <div class="card w-100">
                         <div class="card-body p-4">
-                            <div class="">
-                                <h5 th:text="${comment.author.firstName} + ' ' + ${comment.author.lastName}">Johny Cash</h5>
-                                <p class="small" th:text="${comment.date}"> Date of the comment</p>
-                                <p th:text="${comment.text}">
-                                </p>
+                            <div>
+                                <h5 th:text="${comment.authorFirstName} + ' ' + ${comment.authorLastName}">Johny Cash</h5>
+                                <p class="small" th:text="${comment.date}">Date of the comment</p>
+                                <p th:text="${comment.text}"></p>
                                 <div class="like-dislike-buttons">
-                                    <form th:action="@{/workouts/details/{trainingType}/comment/like/{commentId}(commentId=${comment.id},trainingType=${trainingType})}" method="post">
-                                        <button type="submit">
-                                            <i class="fas fa-thumbs-up me-1"></i><span class="likes" th:text="${comment.likes}">132</span>
-                                        </button>
-                                    </form>
-                                    <form th:action="@{/workouts/details/{trainingType}/comment/dislike/{commentId}(commentId=${comment.id},trainingType=${trainingType})}" method="post">
-                                        <button type="submit">
-                                            <i class="fas fa-thumbs-down me-1"></i><span class="dislikes" th:text="${comment.dislikes}">15</span>
-                                        </button>
-                                    </form>
+                                    <button class="like-button" th:data-comment-id="${comment.id}" th:data-training-type="${trainingType}">
+                                        <i class="fas fa-thumbs-up me-1"></i><span class="likes" th:text="${comment.likes}">132</span>
+                                    </button>
+                                    <button class="dislike-button" th:data-comment-id="${comment.id}" th:data-training-type="${trainingType}">
+                                        <i class="fas fa-thumbs-down me-1"></i><span class="dislikes" th:text="${comment.dislikes}">15</span>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -64,24 +79,24 @@
                 </div>
             </div>
         </div>
-        <!-- Comment Form -->
+
         <!-- Comment Form -->
         <h5 class="mt-3" th:if="${isAuthenticated}">Add Comment Section</h5>
-        <form class="form-block" th:if="${isAuthenticated}" th:method="POST"
-              th:action="@{/workouts/details/comment/{trainingsType}(trainingsType=${trainingType})}">
+        <div id="commentForm" class="form-block" th:if="${isAuthenticated}">
             <div class="row mt-2">
                 <div class="col-xl-12">
                     <div class="form-group">
-                            <textarea class="form-input" id="description" name="description" placeholder="Add your comment here"></textarea>
+                        <textarea class="form-input" id="message" name="description" placeholder="Add your comment here"></textarea>
                     </div>
                 </div>
                 <div class="col-xs-12 mb-2">
-                    <button class="btn btn-primary pull-right" type="submit">Submit</button>
+                    <input class="btn btn-primary pull-right" type="submit"  value="Submit"  id="postComment">
                 </div>
             </div>
-        </form>
+        </div>
     </div>
 </div>
 <footer th:replace="~{fragments/footer::footer}"></footer>
+<script th:src="@{/js/comments.js}"></script>
 </body>
 </html>
