Minor changes of the db + templates

--- a/crossfit-client/src/main/resources/templates/nutrition-tips.html
+++ b/crossfit-client/src/main/resources/templates/nutrition-tips.html
@@ -111,7 +111,7 @@
 
             <article class="blog-post">
                 <h2 class="blog-post-title">Nutrition Essentials for CrossFit Athletes</h2>
-                <p class="blog-post-meta">June 29, 2024 by <a href="#">Your Name</a></p>
+                <p class="blog-post-meta">June 29, 2024 by <small class="text-dark"> Baldzhiyski </small></p>
 
                 <p>Proper nutrition is essential for maximizing performance and recovery in CrossFit. Athletes need a well-balanced diet that provides sufficient energy, promotes muscle repair, and supports overall health.</p>
 
@@ -166,7 +166,7 @@
 
             <article class="blog-post">
                 <h2 class="blog-post-title">Fueling Your CrossFit Performance: Pre-Workout Nutrition</h2>
-                <p class="blog-post-meta">June 29, 2024 by <a href="#">Your Name</a></p>
+                <p class="blog-post-meta">June 29, 2024 by <small class="text-dark"> Baldzhiyski </small></p>
 
                 <p>What you eat before a CrossFit workout can significantly impact your performance and recovery. Pre-workout nutrition aims to provide energy, enhance endurance, and reduce muscle fatigue.</p>
 
