--- a/crossfit-client/src/main/resources/templates/profile-page.html
+++ b/crossfit-client/src/main/resources/templates/profile-page.html
@@ -62,7 +62,7 @@
                                 <label>User Id:</label>
                             </div>
                             <div class="col-md-6">
-                                <p th:text="*{id()}">Kshiti123</p>
+                                <p th:text="*{uuid()}">Kshiti123</p>
                             </div>
                         </div>
                         <div class="row">
