--- a/crossfit-client/src/main/resources/templates/my-trainings.html
+++ b/crossfit-client/src/main/resources/templates/my-trainings.html
@@ -31,7 +31,7 @@
                         <p class="card-text" th:text="*{'Date of the training: ' + weeklyTraining.date}">Date: </p>
                         <p class="card-text" th:text="*{'Time of the training ' + weeklyTraining.time}">Time: 10:00 AM</p>
                         <p class="card-text" th:text="*{'Day of week : ' + weeklyTraining.dayOfWeek}">Day of week</p>
-                        <form th:action="@{/my-workouts/delete-training/{trainingId}(trainingId=*{weeklyTraining.id})}" th:method="POST">
+                        <form th:action="@{/my-workouts/delete-training/{trainingId}(trainingId=*{weeklyTraining.uuid})}" th:method="POST">
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="submit" class="btn btn-sm btn-outline-secondary btn-delete">Delete</button>
