--- a/crossfit-client/src/main/resources/templates/workout-details.html
+++ b/crossfit-client/src/main/resources/templates/workout-details.html
@@ -66,14 +66,14 @@
                                 <p class="small" th:text="${comment.date}">Date of the comment</p>
                                 <p th:text="${comment.text}"></p>
                                 <div class="like-dislike-buttons">
-                                    <button class="like-button" th:data-comment-id="${comment.id}" th:data-training-type="${trainingType}">
+                                    <button class="like-button" th:data-comment-id="${comment.uuid}" th:data-training-type="${trainingType}">
                                         <i class="fas fa-thumbs-up me-1"></i><span class="likes" th:text="${comment.likes}">132</span>
                                     </button>
-                                    <button class="dislike-button" th:data-comment-id="${comment.id}" th:data-training-type="${trainingType}">
+                                    <button class="dislike-button" th:data-comment-id="${comment.uuid}" th:data-training-type="${trainingType}">
                                         <i class="fas fa-thumbs-down me-1"></i><span class="dislikes" th:text="${comment.dislikes}">15</span>
                                     </button>
 
-                                    <button class="delete-button" th:if="${comment.authorUsername} == ${loggedUserUsername}" th:data-comment-id="${comment.id}">
+                                    <button class="delete-button" th:if="${comment.authorUsername} == ${loggedUserUsername}" th:data-comment-id="${comment.uuid}">
                                         <i class="fas fa-trash-alt me-1"></i>
                                     </button>
                                 </div>
