--- a/crossfit-client/src/main/resources/templates/profile-page.html
+++ b/crossfit-client/src/main/resources/templates/profile-page.html
@@ -43,9 +43,9 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="profile-work">
-                    <p>Most visited types of trainings :</p>
+                    <p>Currently enrolled for :</p>
                     <div th:each="training : *{enrolledTrainingsForTheWeek()}">
-                        <a th:text="${training.trainingType}">Training Type</a><br/>
+                        <a th:text="${'Type of training: ' + training.trainingType + ',  Date: ' + training.date}">Training Type</a><br/>
                     </div>
                 </div>
             </div>
