--- a/crossfit-client/src/main/resources/templates/workout-details.html
+++ b/crossfit-client/src/main/resources/templates/workout-details.html
@@ -52,41 +52,19 @@
         <!-- Right Side: Comments Section -->
         <div class="col-md-12">
             <div class="be-comment-block">
-                <h1 class="comments-title" th:text="'Comments: ' + ${displayedCommentsForTheSectionDtos.size()}"></h1>
+                <h1 class="comments-title" >Recent comments : 0</h1>
 
-                <!-- Comment -->
-                <div class="d-flex flex-start mb-4" th:each="comment : ${displayedCommentsForTheSectionDtos}">
-                    <img class="rounded-circle shadow-1-strong me-3"
-                         src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(32).webp" alt="avatar" width="65"
-                         height="65" />
-                    <div class="card w-100">
-                        <div class="card-body p-4">
-                            <div>
-                                <h5 th:text="${comment.authorFirstName} + ' ' + ${comment.authorLastName}">Johny Cash</h5>
-                                <p class="small" th:text="${comment.date}">Date of the comment</p>
-                                <p th:text="${comment.text}"></p>
-                                <div class="like-dislike-buttons">
-                                    <button class="like-button" th:data-comment-id="${comment.uuid}" th:data-training-type="${trainingType}">
-                                        <i class="fas fa-thumbs-up me-1"></i><span class="likes" th:text="${comment.likes}">132</span>
-                                    </button>
-                                    <button class="dislike-button" th:data-comment-id="${comment.uuid}" th:data-training-type="${trainingType}">
-                                        <i class="fas fa-thumbs-down me-1"></i><span class="dislikes" th:text="${comment.dislikes}">15</span>
-                                    </button>
-
-                                    <button class="delete-button" th:if="${comment.authorUsername} == ${loggedUserUsername}" th:data-comment-id="${comment.uuid}">
-                                        <i class="fas fa-trash-alt me-1"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="comments-container">
+                    <!-- Comments will be dynamically inserted here -->
                 </div>
+
             </div>
         </div>
 
         <!-- Comment Form -->
-        <h5 class="mt-3" th:if="${isAuthenticated}">Add Comment Section</h5>
-        <div id="commentForm" class="form-block" th:if="${isAuthenticated}">
+        <h5 class="mt-3" th:if="${isAuthenticated && !userAccDisabled}">Add Comment Section</h5>
+        <h5 class="mt-3 text-danger" th:if="${userAccDisabled}">Your account has been disabled for writing comments. Contact support.</h5>
+        <div id="commentForm" class="form-block" th:if="${isAuthenticated && !userAccDisabled}">
             <div class="row mt-2">
                 <div class="col-xl-12">
                     <div class="form-group">
